--- a/Alllive/Alllive.csproj
+++ b/Alllive/Alllive.csproj
@@ -618,6 +618,8 @@
     <Content Include="Scripts\jquery-3.5.0.slim.min.map" />
     <Content Include="Scripts\jquery-3.5.0.min.map" />
     <Content Include="Views\Navigation\SearchResults.cshtml" />
+    <Content Include="Views\User\TutorRegistration.cshtml" />
+    <Content Include="Views\User\ViewProfile.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
