fixed broken links and made homepage schedule when logged in

--- a/Alllive/Alllive.csproj
+++ b/Alllive/Alllive.csproj
@@ -167,6 +167,8 @@
     <Content Include="Scripts\jquery-3.5.0.slim.js" />
     <Content Include="Scripts\jquery-3.5.0.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -621,6 +623,7 @@
     <Content Include="Views\User\TutorRegistration.cshtml" />
     <Content Include="Views\User\ViewProfile.cshtml" />
     <Content Include="Views\User\EditMeeting.cshtml" />
+    <Content Include="Views\User\RegisterSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
