fixed error when logging in.  fixed dropdown on time picker on rigister page

--- a/Alllive/Web.config
+++ b/Alllive/Web.config
@@ -10,13 +10,13 @@
   </configSections>
   <connectionStrings>
     <add name="AllliveDBConnectionString" connectionString="Data Source=LAPTOP-5P9JLMHT\SQLEXPRESS;Initial Catalog=AllliveDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="AllliveDBEntities" connectionString="metadata=res://*/Models.AllLiveDb2.csdl|res://*/Models.AllLiveDb2.ssdl|res://*/Models.AllLiveDb2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-5P9JLMHT\SQLEXPRESS;initial catalog=AllliveDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="AllliveDBEntities" connectionString="metadata=res://*/Models.AllLiveDb2.csdl|res://*/Models.AllLiveDb2.ssdl|res://*/Models.AllLiveDb2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-5P9JLMHT\SQLEXPRESS;initial catalog=AllliveDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="FileRoot" value=""/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
