--- a/Alllive/Alllive.csproj
+++ b/Alllive/Alllive.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\Utilities.cs" />
     <Compile Include="Models\AllLiveDb2.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
