--- a/Alllive/Web.config
+++ b/Alllive/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AllliveDBConnectionString" connectionString="Data Source=LAPTOP-5P9JLMHT\SQLEXPRESS;Initial Catalog=AllliveDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="AllliveDBConnectionString" connectionString="Data Source=LAPTOP-5P9JLMHT\SQLEXPRESS;Initial Catalog=AllliveDB;Integrated Security=True" providerName="System.Data.SqlClient" />-->
   <add name="AllliveDBEntities" connectionString="metadata=res://*/Models.AllLiveDb2.csdl|res://*/Models.AllLiveDb2.ssdl|res://*/Models.AllLiveDb2.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-5P9JLMHT\SQLEXPRESS;initial catalog=AllliveDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
