--- a/Alllive/Web.config
+++ b/Alllive/Web.config
@@ -22,7 +22,7 @@
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Home/Login" timeout="2880" />
+      <forms loginUrl="~/User/Login" timeout="2880" />
     </authentication>
   </system.web>
   <runtime>
