--- a/Alllive/Views/Web.config
+++ b/Alllive/Views/Web.config
@@ -18,6 +18,9 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="Alllive" />
+        <add namespace="Alllive.Helpers" />
+        <add namespace="Alllive.Models" />
+
       </namespaces>
     </pages>
   </system.web.webPages.razor>
