--- a/Alllive/Web.config
+++ b/Alllive/Web.config
@@ -17,6 +17,10 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="FileRoot" value=""/>
+    <add key="SMTPHost" value="smtpout.secureserver.net"/>
+    <add key="SMTPFromEmail" value="Mail@itsalllive.com"/>
+    <add key="SMTPUserName" value="Mail@itsalllive.com"/>
+    <add key="SMTPPassword" value ="G00gl3!@"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
