added stripe configuration almost complete

--- a/Alllive/Web.config
+++ b/Alllive/Web.config
@@ -16,11 +16,12 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="FileRoot" value=""/>
-    <add key="SMTPHost" value="smtpout.secureserver.net"/>
-    <add key="SMTPFromEmail" value="Mail@itsalllive.com"/>
-    <add key="SMTPUserName" value="Mail@itsalllive.com"/>
-    <add key="SMTPPassword" value ="G00gl3!@"/>
+    <add key="FileRoot" value="" />
+    <add key="SMTPHost" value="smtpout.secureserver.net" />
+    <add key="SMTPFromEmail" value="Mail@itsalllive.com" />
+    <add key="SMTPUserName" value="Mail@itsalllive.com" />
+    <add key="SMTPPassword" value="G00gl3!@" />
+    <add key="SMTPFromName" value="AllLive.com" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
