--- a/Alllive/Alllive.csproj
+++ b/Alllive/Alllive.csproj
@@ -191,6 +191,7 @@
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\MeetingViewModel.cs" />
     <Compile Include="Models\Message.cs">
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
@@ -872,6 +873,7 @@
     <Content Include="Views\Message\MessageCenter.cshtml" />
     <Content Include="Views\Message\_Message.cshtml" />
     <Content Include="Views\Schedule\RequestTutor.cshtml" />
+    <Content Include="Views\User\SubmitPayment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
