--- a/Alllive/Alllive.csproj
+++ b/Alllive/Alllive.csproj
@@ -149,6 +149,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AllLiveControllerBase.cs" />
+    <Compile Include="Controllers\BillingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\MeetingController.cs" />
@@ -191,7 +192,6 @@
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LoginViewModel.cs" />
-    <Compile Include="Models\MeetingViewModel.cs" />
     <Compile Include="Models\Message.cs">
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
@@ -202,12 +202,14 @@
     <Compile Include="Models\password.cs">
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PaymentMethodViewModel.cs" />
     <Compile Include="Models\Schedule.cs">
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ScheduleMeeting.cs">
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ScheduleMeeting.Extend.cs" />
     <Compile Include="Models\ScheduleModel.cs" />
     <Compile Include="Models\SearchTutor.cs">
       <DependentUpon>AllLiveDb2.tt</DependentUpon>
@@ -236,6 +238,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\global.css" />
     <Content Include="Content\images\ui-icons_444444_256x240.png" />
     <Content Include="Content\images\ui-icons_555555_256x240.png" />
     <Content Include="Content\images\ui-icons_777620_256x240.png" />
@@ -393,6 +396,7 @@
       <DependentUpon>AllLiveDb2.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-3.5.1.intellisense.js" />
+    <Content Include="Scripts\client.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\jquery-3.5.1.js" />
     <Content Include="Scripts\jquery-3.5.1.min.js" />
@@ -874,6 +878,9 @@
     <Content Include="Views\Message\_Message.cshtml" />
     <Content Include="Views\Schedule\RequestTutor.cshtml" />
     <Content Include="Views\User\SubmitPayment.cshtml" />
+    <Content Include="Views\Billing\AccountList.cshtml" />
+    <Content Include="Views\Billing\AddAccount.cshtml" />
+    <Content Include="Views\Billing\CheckOut.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
