--- a/Alllive/Alllive.csproj
+++ b/Alllive/Alllive.csproj
@@ -886,6 +886,7 @@
     <Content Include="Views\Billing\CheckOut.cshtml" />
     <Content Include="Views\Meeting\Meeting.cshtml" />
     <Content Include="Views\Meeting\SubmitMeeting.cshtml" />
+    <Content Include="Views\Meeting\MeetingReviewPage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
